<resources>
    <string name="app_name">eRoyal</string>
    <string name="notification_channel_default_id">Default</string>
    <string name="notification_channel_default_name">Notification</string>
    <string name="empty"> </string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="home">Home</string>
    <string name="clock_in_clock_out">Clock in/Out</string>
    <string name="tasks">Tasks</string>
    <string name="orders">Orders</string>
    <string name="extras">Extras</string>
    <string name="visits">Visits</string>
    <string name="me">Me</string>
    <string name="task_by">Task by: </string>
    <string name="progress_today">Progress today</string>
    <string name="target_goals">Target \nGoals</string>
    <string name="follow_up_visit">Follow-up Visit</string>
    <string name="name_of_place">Name of Place</string>
    <string name="no_notification">You have not notifications yet</string>
    <string name="phone">Phone</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="hello">Hello </string>
    <string name="title_welcome_morning">Good morning!</string>
    <string name="title_welcome_afternoon">Good afternoon! </string>
    <string name="title_welcome_evening">Good evening! </string>
    <string name="hold_on_to_your_seat">Hold on to your seat</string>
    <string name="we_are_still_preparing_this_page">We are still preparing this page</string>
    <string name="task_remaining">You have %1$d tasks remaining today.</string>
    <string name="contact_person">Contact Person</string>
    <string name="address">Address</string>
    <string name="coming_soon">Coming soon</string>
    <string name="previous_visit">Previous Visit</string>
    <string name="billboards">Billboard(s)</string>
    <string name="no_billboards">No Billboard(s)</string>
    <string name="price_list_updated">Price list updated</string>
    <string name="price_list_not_updated">Price list not updated</string>
    <string name="brochures">Brochures</string>
    <string name="no_brochures">No Brochures</string>
    <string name="o_s">O/S</string>
    <string name="no_o_s">No O/S</string>
    <string name="s_o">S/O</string>
    <string name="no_s_o">No S/O</string>
    <string name="buying_retail">Buying retail</string>
    <string name="no_buying_retail">Not buying retail</string>
    <string name="outstanding_bill">Outstanding bill</string>
    <string name="no_outstanding_bill">No outstanding bill</string>
    <string name="sale_program">Sale program</string>
    <string name="no_sale_program">No sale program</string>
    <string name="existing_customer">Existing customer</string>
    <string name="no_existing_customer">New customer</string>
    <string name="next">Next</string>
    <string name="visit">Visit</string>
    <string name="notes">Notes</string>
    <string name="add_photo">Add photo</string>
    <string name="add_clients_signature">Add client\'s signature</string>
    <string name="new_market_share_data">New market share data</string>
    <string name="market_share_name">Market share name</string>
    <string name="price">Price</string>
    <string name="yout_current_visit_data">Your current visit data</string>
    <string name="invalid_credential">Login failed. Please check your email/username and password</string>
    <string name="location_permission_required">Location permission is required. Please granted.</string>
    <string name="storage_camera_permission_required">Storage and camera permission is required. Please granted.</string>
    <string name="clear_signature"><u>Clear Signature</u></string>
    <string name="checkout_successful">Hooray! Check out success. Thank you&#8230;</string>
    <string name="its_been">It\'s been</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email and we\'ll send you a link to reset your password</string>
    <string name="stuff_happens">Stuff happens!</string>
    <string name="reset">Reset</string>
    <string name="email_not_found">Your email not registered&#8230;</string>
    <string name="success_reset_password">Reset password successful. Please check your email and follow further instruction&#8230;</string>
    <string name="make_sure_location">Make sure your current location on GPS are close with the customer location</string>
    <string name="failed_fetch_your_location">Failed to fetch your location</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="settings">Settings</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="delete_profile_picture">Delete Profile Picture</string>
    <string name="new_profile_picture">New Profile Picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="something_wrong">Something wrong. Please try again later&#8230;</string>
    <string name="image_profile_updated">Image profile successfully updated</string>
    <string name="password_did_not_match">Password did not match</string>
    <string name="password_successfully_changed">Password successfully changed</string>
    <string name="failed_change_password">Change password failed</string>
    <string name="brand">Brand</string>
    <string name="done">Done</string>
    <string name="backdrops">Backdrops</string>
    <string name="banners">Banners</string>
    <string name="door_painting">Door Painting</string>
    <string name="brand_name">Brand name</string>
    <string name="send_checklist_succes">Sending image check list successful</string>
    <string name="send_checklist_failed">Sending checklist failed. Make sure brand is correct.</string>
    <string name="you_seem_to_be_offline">You seem to be offline.\nPlease check your connection</string>
    <string name="no_data">No data&#8230;</string>
    <string name="there_is_nothing_here_yet">There is nothing in here yet&#8230;</string>
    <string name="enjoy_your_day_but_stay_on_your_toes">Enjoy your day but stay on your toes</string>
    <string name="customer_visited">Customer Visited</string>
    <string name="target_sales">Target Sales</string>
    <string name="visited_at">Visited at</string>
    <string name="v">V</string>
    <string name="statistic">Statistic</string>
    <string name="sales">Sales</string>
    <string name="drop">Drop</string>
    <string name="wrong_address">Wrong address</string>
    <string name="confirm">Confirm</string>
    <string name="im_dropping_task">I\'m dropping this task because of:</string>
    <string name="target_doesnt_exist">Target doesn\'t exist</string>
    <string name="get_direction">Get directions ?</string>
    <string name="long_loading_message">Do not turn off your device. We are still processing the data. It might take a while&#8230;</string>
    <string name="fabric_sign">Fabric Sign</string>
    <string name="task_failed">Task Failed</string>
    <string name="currently_you_are_have_not_visited_yet">Currently you have not visited any customer yet</string>
    <string name="currently_you_are_have_not_failed_task_yet">You have not failed any task yet</string>
    <string name="currently_you_are_have_not_free_visited_yet">You have not free visited yet</string>
    <string name="customer_state">Customer State</string>
    <string name="visit_reason">Visit Reason</string>
    <string name="notification">Notification</string>
    <string name="view_details">View details</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="city">City</string>
    <string name="customer_type">Customer Type</string>
    <string name="pick_customer_location">Pick Customer Location</string>
    <string name="customer_not_registered_yet">Customer not registered yet</string>
    <string name="make_sure_customer_location_are_accurate">Make sure customer location are accurate</string>
    <string name="area">Area</string>
    <string name="branch">Branch</string>
    <string name="submit">Submit</string>
    <string name="add_new_customer_success">Add new customer success&#8230;</string>
    <string name="add_visit_image">Add visit image</string>
    <string name="customer_location_already_registered">Customer location already registered</string>
    <string name="logout">Log Out</string>
    <string name="are_you_sure_want_to_sign_out">Are you sure want to sign out ?</string>
    <string name="yes">Yes</string>
    <string name="notifications">Notifications</string>
    <string name="clock_in">Clock In</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="clock_out">Clock Out</string>
    <string name="are_you_sure_want_to_do_clock_out">Are you sure want to do clock out?</string>
    <string name="are_you_sure_delete_all_notifications">Are you sure delete all notifications?</string>
    <string name="empty_notification_message">This is where I put my notifications</string>
    <string name="if_i_had_any">If I had any!</string>
    <string name="finish">Finish</string>
    <string name="check_in">Check In</string>
    <string name="my_customers">My Customers</string>
    <string name="details">details</string>
    <string name="status">Status:</string>
    <string name="active">Active</string>
    <string name="my_team">My Team</string>
    <string name="my_report">My Report</string>
    <string name="most_visited_customer">Most Visited Customer</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="most_planned_customer">Most Planned Customer</string>
    <string name="currently_you_are_not_have_any_plan_yet">Currently you are not have any plan yet</string>
    <string name="team_plans">Team Plans</string>
    <string name="title_by_branch">By Branch in %s</string>
    <string name="title_by_brands">By My Brands</string>
    <string name="tasks_assigned">tasks assigned</string>
    <string name="by_my_sales_team">By My Sales Team</string>
    <string name="other_visit">Other Visits</string>
    <string name="failed_tasks">Failed Tasks</string>
    <string name="team_member">Team Member</string>
    <string name="last_activity">Last activity :</string>
    <string name="visited">Visited</string>
    <string name="market">Market</string>
    <string name="promo">Promo</string>
    <string name="program">Program</string>
    <string name="report_per_area">Report per Area</string>
    <string name="branches">Branches</string>
    <string name="customers">Customers</string>
    <string name="current_month">Current Month</string>
    <string name="prev_month">Previous Month</string>
    <string name="head_count">Headcount</string>
    <string name="asms">ASMs</string>
    <string name="top_sales">Top Sales</string>
    <string name="available_regions">Available Regions</string>
    <string name="apply">Apply</string>
    <string name="my_branches">My Branches</string>
    <string name="branches_in">Branches in</string>
    <string name="sales_in">Sales in</string>
    <string name="reports">Reports</string>
    <string name="your_activity">Your Activity</string>
    <string name="today_at">Today at</string>
    <string name="you_have_no_activities_yet">You have no activities yet</string>
    <string name="please_take_a_picture_for_visit">Please take picture for visit</string>
    <string name="brands">Brands</string>
    <string name="market_share_data">Marketshare Data</string>
    <string name="total_volume">Total Volume</string>
</resources>