<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/leftDrawerNotification"
        android:icon="@drawable/ic_notification_white"
        android:iconTint="@android:color/white"
        android:title="@string/notifications" />
    <item
        android:id="@+id/leftDrawerMyTeam"
        android:icon="@drawable/ic_my_team"
        android:iconTint="@android:color/white"
        android:title="@string/my_team" />
    <item
        android:id="@+id/leftDrawerMyCustomers"
        android:icon="@drawable/ic_my_customer"
        android:iconTint="@android:color/white"
        android:title="@string/my_customers" />
    <item
        android:id="@+id/leftDrawerMyReport"
        android:icon="@drawable/ic_report"
        android:iconTint="@android:color/white"
        android:title="@string/my_report" />
    <item
        android:id="@+id/leftDrawerSettings"
        android:icon="@drawable/ic_settings_white"
        android:iconTint="@android:color/white"
        android:title="@string/go_to_settings" />

</menu>
